# Thiet_Bi_Giam_Sat_Nguoi_Ra_Vao_Phong

buzzer_3/: CMakeLists.txt
buzzer_3/main/: CMakeLists.txt  main.c
cam_3/: CMakeLists.txt  ESP32C3_BRIDGE_CODE.c  partitions_rainmaker.csv  sdkconfig  sdkconfig.old
cam_3/main/: CMakeLists.txt  http_notifier.c  http_notifier.h  idf_component.yml  main.c
